# nodalys-pipeline-incomplet

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  changes-summary.md  crontab  diagnostic-note.md  docker-compose.yml  flux_final.drawio  pyproject.toml  seed.py
assistant/: agent.py  tools.py
collect/: contrats.py  feedbacks.py  sessions.py
comprendre_le_projet/: .$flux_uml_bdd.drawio.dtmp  .$mpd.drawio.bkp  RGPD_a_verifier  dir.md  flux_final.drawio  flux_uml.drawio  flux_uml_bdd.drawio  mpd.drawio  tree
comprendre_le_projet/fichier_et_dossier/: dir.md  tree
data/: contrats.json
data/feedbacks/: feedbacks_2024_T3.csv  feedbacks_2024_T4.csv  feedbacks_2025_T1.csv  feedbacks_2025_T2.csv  feedbacks_2025_T3.csv
jobs/: anonymise_feedbacks.py  purge_commentaires.py
migrations/versions/: 004_create_contrats.py
mock_api/: Dockerfile
mock_api/app/: main.py  seed.py
queries/: contrats_actifs.sql  feedbacks_recents.sql
scripts/: generate_contrats_fixture.py  generate_csv_feedbacks.py
