[project]
name = "nodalys-pipeline-incomplet"
version = "0.1.0"
description = "Pipeline de collecte Nodalys inachevé — Simplon Dev IA Agentique, Phase 1, Brief 1"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pandas>=2.2",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-azure-ai>=1.0,<2.0",
    "azure-ai-inference>=1.0.0b9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["collect*", "assistant*", "mock_api*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
